new proj/src/objects/GE_ES_ProcessInstanceHistory__c.object
<CustomObject>
    <fields>
        <fullName>Actor_ID__c</fullName>
        <label>Actor ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actor_Name__c</fullName>
        <label>Actual Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OriginalActorId__c</fullName>
        <label>Original Actor ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Actor_Name__c</fullName>
        <label>Assigned to (Approver ID)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessInstanceId__c</fullName>
        <label>Process Instance ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemindersSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminders Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StepStatus__c</fullName>
        <label>Step Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Object_Id__c</fullName>
        <label>Target Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Process Instance History</label>
    <nameField>
        <label>Process Instance History  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Instance Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>